--- a/lang/en-us.json
+++ b/lang/en-us.json
@@ -46,12 +46,16 @@
     "channel-deleted": " channel has been deleted",
     "channel-invisibled": "channel has been invisibled",
     "slowmode-message": "Set the slowmode delay in this channel to ",
-    "slowmode-seconds": " seconds",
+    "slowmode-seconds": " seconds.",
     "RESET-confirm": "Are you sure you want to perform this operation?",
     "RESET-confirm-button": "confirm",
     "RESET-cancel-button": "cancel",
-    "RESET-resetted": "Successfully reset all data",
-    "RESET-canceled": "This command has been canceled",
+    "RESET-resetted": "Successfully reset all data.",
+    "RESET-canceled": "This command has been canceled.",
+    "user-tempmuted": " has been temporarily muted.",
+    "user-tempbanned": " has been temporarily banned.",
+    "chat-filter": "This word is not allowed!",
+    "chat-filter-reason": "inappropriate remarks",
 
     "user-info": "User Information",
     "user-info-name": "Name",
@@ -92,11 +96,14 @@
     "menu-message-slowmoe": "set the slow mode delay for channel",
     "menu-message-time": "get the current time",
     "menu-message-tlm": "send a temp message",
+    "menu-message-tempban": "temporarily ban a member",
+    "menu-message-tempmute": "temporarily mute a member",
     "menu-message-unban": "unban a member",
     "menu-message-unmute": "unmute a member",
     "menu-message-uinfo": "View a member's information",
     "menu-message-warn": "warn a member",
 
+    "search_result": "search results:",
     "music-link": "Go to link",
     "music-pause": "Pause",
     "music-resume": "Resume",
@@ -113,16 +120,22 @@
     "music-like_count": "Like count",
     "music-DJ": "DJ",
     "music-channel": "playing in",
-    "music-still-playing": "There are still music playing",
+    "music-still-playing": "There are still music playing.",
     "music-bot-not-in-channel": "Music bot not in voice channel.",
-    "music-nothing-playing": "No music are playing",
+    "music-nothing-playing": "No music are playing.",
     "music-nothing-pause": "No music are paused",
     "repeat-enabled": "repeat mode has beem enabled.",
     "repeat-disabled": "repeat mode has beem disabled.",
     "volume-changed": "Volume adjusted from ",
     "volume-changed-to": " to ",
-    "volume-muted": "Bot has been muted",
-    "playlist_added": "Added to playlist",
+    "volume-nothing-changed": "Nothing has changed",
+    "volume-muted": "Bot has been muted.",
+    "playlist_added": "Added to playlist.",
+    "move-error": "Unable to move the song that is playing.",
+    "out-range": "The entered number is out of range.",
+    "music-moved": "Successfully moved play order.",
+    "delete-error": "Unable to delete the song that is playing.",
+    "music-deleted": "Successfully deleted the song with the specified number.",
 
     "debug-enabled": "Debug mode: enabled",
     "debug-disabled": "Debug mode: disabled",
@@ -133,5 +146,6 @@
     "count": " [count]",
     "reason": " (reason)",
     "someone's": "'s",
-    "category": " [channel ID]"
+    "category": " [channel ID]",
+    "duration": " [duration]"
 }
