--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -52,6 +52,10 @@
     "RESET-cancel-button": "取消",
     "RESET-resetted": "已成功重置所有资料",
     "RESET-canceled": "已取消此指令",
+    "user-tempmuted": " 已被暂时禁言",
+    "user-tempbanned": " 已被暂时封锁",
+    "chat-filter": "该字词不被允许!",
+    "chat-filter-reason": "不适当言论",
 
     "user-info": "成员资讯",
     "user-info-name": "名称",
@@ -70,9 +74,9 @@
     "menu-name": "指令列表",
     "menu-select": "请选择一项...",
     "selected": "已选择  ",
-    "menu-message-addadmin": "新增一个成员至管理员名单",
-    "menu-message-addbypass": "新增一个成员至绕过名单",
-    "menu-message-ban": "封锁一个成员",
+    "menu-message-addadmin": "新增一位成员至管理员名单",
+    "menu-message-addbypass": "新增一位成员至绕过名单",
+    "menu-message-ban": "封锁一位成员",
     "menu-message-clear": "删除讯息",
     "menu-message-chlang": "更改机器人语言",
     "menu-message-chact": "更改机器人状态",
@@ -86,17 +90,20 @@
     "menu-message-kick": "从伺服器踢出一位玩家",
     "menu-message-mute": "将一位成员禁言",
     "menu-message-reload": "重新加载设定及语言档",
-    "menu-message-removeadmin": "从管理员名单中移除一个成员",
-    "menu-message-removebypass": "从绕过名单中移除一个成员",
+    "menu-message-removeadmin": "从管理员名单中移除一位成员",
+    "menu-message-removebypass": "从绕过名单中移除一位成员",
     "menu-message-showwarn": "显示某成员的警告数量",
     "menu-message-slowmoe": "设置频道慢速模式",
     "menu-message-time": "获取当前时间",
     "menu-message-tlm": "发送临时讯息",
-    "menu-message-unban": "解除封锁一个成员",
+    "menu-message-tempban": "暂时封锁一位成员",
+    "menu-message-tempmute": "暂时禁言一位成员",
+    "menu-message-unban": "解除封锁一位成员",
     "menu-message-unmute": "将一位成员解除禁言",
-    "menu-message-uinfo": "查看一个成员的资讯",
-    "menu-message-warn": "警告一个成员",
+    "menu-message-uinfo": "查看一位成员的资讯",
+    "menu-message-warn": "警告一位成员",
 
+    "search_result": "搜寻结果:",
     "music-link": "前往连结",
     "music-pause": "暂停歌曲",
     "music-resume": "继续播放",
@@ -121,8 +128,14 @@
     "repeat-disabled": "循环播放模式已关闭",
     "volume-changed": "音量已由 ",
     "volume-changed-to": " 调整为 ",
+    "volume-nothing-changed": "没有发生任何变化",
     "volume-muted": "机器人已静音",
     "playlist_added": "已添加至播放清单",
+    "move-error": "无法移动正在播放的歌曲",
+    "out-range": "输入的数字超出范围",
+    "music-moved": "已成功移动播放顺序",
+    "delete-error": "无法删除正在播放的歌曲",
+    "music-deleted": "已成功删除指定编号的歌曲",
 
     "debug-enabled": "侦错模式: 开启",
     "debug-disabled": "侦错模式: 关闭",
@@ -133,5 +146,6 @@
     "count": " [数量]",
     "reason": " (原因)",
     "someone's": " 的",
-    "category": " [频道ID]"
+    "category": " [频道ID]",
+    "duration": " [持续时间]"
 }
