--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -52,6 +52,10 @@
     "RESET-cancel-button": "取消",
     "RESET-resetted": "已成功重置所有資料",
     "RESET-canceled": "已取消此指令",
+    "user-tempmuted": " 已被暫時禁言",
+    "user-tempbanned": " 已被暫時封鎖",
+    "chat-filter": "該字詞不被允許!",
+    "chat-filter-reason": "不適當言論",
 
     "user-info": "成員資訊",
     "user-info-name": "名稱",
@@ -70,9 +74,9 @@
     "menu-name": "指令列表",
     "menu-select": "請選擇一項...",
     "selected": "已選擇  ",
-    "menu-message-addadmin": "新增一個成員至管理員名單",
-    "menu-message-addbypass": "新增一個成員至繞過名單",
-    "menu-message-ban": "封鎖一個成員",
+    "menu-message-addadmin": "新增一位成員至管理員名單",
+    "menu-message-addbypass": "新增一位成員至繞過名單",
+    "menu-message-ban": "封鎖一位成員",
     "menu-message-clear": "刪除訊息",
     "menu-message-chlang": "更改機器人語言",
     "menu-message-chact": "更改機器人狀態",
@@ -86,17 +90,20 @@
     "menu-message-kick": "從伺服器踢出一位玩家",
     "menu-message-mute": "將一位成員禁言",
     "menu-message-reload": "重新加載設定及語言檔",
-    "menu-message-removeadmin": "從管理員名單中移除一個成員",
-    "menu-message-removebypass": "從繞過名單中移除一個成員",
+    "menu-message-removeadmin": "從管理員名單中移除一位成員",
+    "menu-message-removebypass": "從繞過名單中移除一位成員",
     "menu-message-showwarn": "顯示某成員的警告數量",
     "menu-message-slowmoe": "設置頻道慢速模式",
     "menu-message-time": "獲取當前時間",
     "menu-message-tlm": "發送臨時訊息",
-    "menu-message-unban": "解除封鎖一個成員",
+    "menu-message-tempban": "暫時封鎖一位成員",
+    "menu-message-tempmute": "暫時禁言一位成員",
+    "menu-message-unban": "解除封鎖一位成員",
     "menu-message-unmute": "將一位成員解除禁言",
-    "menu-message-uinfo": "查看一個成員的資訊",
-    "menu-message-warn": "警告一個成員",
+    "menu-message-uinfo": "查看一位成員的資訊",
+    "menu-message-warn": "警告一位成員",
 
+    "search_result": "搜尋結果:",
     "music-link": "前往連結",
     "music-pause": "暫停歌曲",
     "music-resume": "繼續播放",
@@ -121,8 +128,14 @@
     "repeat-disabled": "循環播放模式已關閉",
     "volume-changed": "音量已由 ",
     "volume-changed-to": " 調整為 ",
+    "volume-nothing-changed": "沒有發生任何變化",
     "volume-muted": "機器人已靜音",
     "playlist_added": "已添加至播放清單",
+    "move-error": "無法移動正在播放的歌曲",
+    "out-range": "輸入的數字超出範圍",
+    "music-moved": "已成功移動播放順序",
+    "delete-error": "無法刪除正在播放的歌曲",
+    "music-deleted": "已成功刪除指定編號的歌曲",
 
     "debug-enabled": "偵錯模式: 開啟",
     "debug-disabled": "偵錯模式: 關閉",
@@ -133,5 +146,6 @@
     "count": " [數量]",
     "reason": " (原因)",
     "someone's": " 的",
-    "category": " [頻道ID]"
+    "category": " [頻道ID]",
+    "duration": " [持續時間]"
 }
