--- a/lang/en-us.json
+++ b/lang/en-us.json
@@ -56,6 +56,8 @@
     "user-tempbanned": " has been temporarily banned.",
     "chat-filter": "This word is not allowed!",
     "chat-filter-reason": "inappropriate remarks",
+    "send-fail": "Failed to send message.",
+    "send-success": "Message sent successfully.",
 
     "user-info": "User Information",
     "user-info-name": "Name",
@@ -74,6 +76,8 @@
     "menu-name": "Commands list",
     "menu-select": "Please select one...",
     "selected": "Selected : ",
+    "next-page": "next page",
+    "previous-page": "previous page",
     "menu-message-addadmin": "Add a member to the administrator list",
     "menu-message-addbypass": "Add a member to the bypass list",
     "menu-message-ban": "ban a member",
@@ -89,11 +93,13 @@
     "menu-message-gay": "get the gay level for member",
     "menu-message-kick": "kick a member from server",
     "menu-message-mute": "mute a member",
+    "menu-message-ping": "ping an IP address",
     "menu-message-reload": "reload the config and language file",
     "menu-message-removeadmin": "remove a member from the administrator list",
     "menu-message-removebypass": "remove a member from the bypass list",
     "menu-message-showwarn": "show warnings for member",
     "menu-message-slowmoe": "set the slow mode delay for channel",
+    "menu-message-send": "Sending private messages to member with bot.",
     "menu-message-time": "get the current time",
     "menu-message-tlm": "send a temp message",
     "menu-message-tempban": "temporarily ban a member",
@@ -110,8 +116,9 @@
     "music-stop": "Stop",
     "music-list": "Play list",
     "music-repeat": "Repeat",
+    "music-random": "Shuffle",
     "music-skip": "Skip",
-    "music-mute": "Mute",
+    "music-favorite": "Add to my favorites",
     "music-url-error": "Please type a right url.",
     "music-user-not-in-channel": "Please join a voice channel first.",
     "music-playing": "Now playing... ",
@@ -136,6 +143,18 @@
     "music-moved": "Successfully moved play order.",
     "delete-error": "Unable to delete the song that is playing.",
     "music-deleted": "Successfully deleted the song with the specified number.",
+    "music-randomed": "Playlist has been shuffle.",
+    "favorite-not-url": "The URL of the song to be added is not entered.",
+    "favorite-error-url": "Please enter the correct song URL.",
+    "favorite-added": "Added to my favorites list.",
+    "favorite-remove-not-number": "The number of the song to be deleted has not been entered.",
+    "favorite-list-nothing": "No items to show.",
+    "favorite-list-title": "'s favorite songs",
+    "favorite-play-not-number": "The number of the song you want to play has not been entered.",
+    "favorite-menu-add": "Add a song to my favorites",
+    "favorite-menu-remove": "Remove the specified numbered song from favorites",
+    "favorite-menu-list": "List my favorites list",
+    "favorite-menu-play": "Play the specified number of songs from favorites",
 
     "debug-enabled": "Debug mode: enabled",
     "debug-disabled": "Debug mode: disabled",
@@ -147,5 +166,18 @@
     "reason": " (reason)",
     "someone's": "'s",
     "category": " [channel ID]",
-    "duration": " [duration]"
+    "duration": " [duration]",
+
+    "ping-timeout": "Request timed out.",
+    "with_32_bytes": "with 32 bytes of data",
+    "reply_from": "Reply from ",
+    "bytes_time": ": bytes=32 time=",
+    "round_trip_times": "Approximate round trip times in milli-seconds:",
+    "minimum": "Minimum = ",
+    "maximum": ", Maximum = ",
+    "average": ", Average = ",
+    "ping_stat": "Ping statistics:",
+    "packet": "Packets: Sent = 4, Received = ",
+    "lost": ", Lost = ",
+    "lost_%": "% loss"
 }
