--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -56,6 +56,8 @@
     "user-tempbanned": " 已被暂时封锁",
     "chat-filter": "该字词不被允许!",
     "chat-filter-reason": "不适当言论",
+    "send-fail": "讯息发送失败",
+    "send-success": "已成功发送讯息",
 
     "user-info": "成员资讯",
     "user-info-name": "名称",
@@ -74,6 +76,8 @@
     "menu-name": "指令列表",
     "menu-select": "请选择一项...",
     "selected": "已选择  ",
+    "next-page": "下一页",
+    "previous-page": "上一页",
     "menu-message-addadmin": "新增一位成员至管理员名单",
     "menu-message-addbypass": "新增一位成员至绕过名单",
     "menu-message-ban": "封锁一位成员",
@@ -89,11 +93,13 @@
     "menu-message-gay": "获取成员同性恋值",
     "menu-message-kick": "从伺服器踢出一位玩家",
     "menu-message-mute": "将一位成员禁言",
+    "menu-message-ping": "ping 一个 IP 位置",
     "menu-message-reload": "重新加载设定及语言档",
     "menu-message-removeadmin": "从管理员名单中移除一位成员",
     "menu-message-removebypass": "从绕过名单中移除一位成员",
     "menu-message-showwarn": "显示某成员的警告数量",
     "menu-message-slowmoe": "设置频道慢速模式",
+    "menu-message-send": "使用机器人传送私人讯息",
     "menu-message-time": "获取当前时间",
     "menu-message-tlm": "发送临时讯息",
     "menu-message-tempban": "暂时封锁一位成员",
@@ -110,8 +116,9 @@
     "music-stop": "停止播放",
     "music-list": "播放列表",
     "music-repeat": "循环播放",
+    "music-random": "随机播放",
     "music-skip": "下一首",
-    "music-mute": "静音",
+    "music-favorite": "新增至我的最爱",
     "music-url-error": "未输入欲播放歌曲网址",
     "music-user-not-in-channel": "请先加入语音频道",
     "music-playing": "正在播放... ",
@@ -136,6 +143,18 @@
     "music-moved": "已成功移动播放顺序",
     "delete-error": "无法删除正在播放的歌曲",
     "music-deleted": "已成功删除指定编号的歌曲",
+    "music-randomed": "已打乱播放清单顺序",
+    "favorite-not-url": "未输入欲加入歌曲网址",
+    "favorite-error-url": "请输入正确的歌曲网址",
+    "favorite-added": "已新增至我的最爱列表",
+    "favorite-remove-not-number": "未输入欲删除歌曲编号",
+    "favorite-list-nothing": "没有项目可以显示",
+    "favorite-list-title": " 的喜好歌曲",
+    "favorite-play-not-number": "未输入欲播放歌曲编号",
+    "favorite-menu-add": "新增歌曲至我的最爱",
+    "favorite-menu-remove": "从我的最爱中移除指定编号歌曲",
+    "favorite-menu-list": "列出我的最爱清单",
+    "favorite-menu-play": "从我的最爱中播放指定编号歌曲",
 
     "debug-enabled": "侦错模式: 开启",
     "debug-disabled": "侦错模式: 关闭",
@@ -147,5 +166,18 @@
     "reason": " (原因)",
     "someone's": " 的",
     "category": " [频道ID]",
-    "duration": " [持续时间]"
+    "duration": " [持续时间]",
+
+    "ping-timeout": "要求等候逾时",
+    "with_32_bytes": "(使用 32 位元组的资料)",
+    "reply_from": "回覆自 ",
+    "bytes_time": ": 位元组=32 时间=",
+    "round_trip_times": "大约的来回时间 (毫秒):",
+    "minimum": "最小值 = ",
+    "maximum": "，最大值 = ",
+    "average": "，平均 = ",
+    "ping_stat": "Ping 统计资料:",
+    "packet": "封包: 已传送 = 4，已收到 = ",
+    "lost": "，已遗失 = ",
+    "lost_%": "% 遗失"
 }
