--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -56,6 +56,8 @@
     "user-tempbanned": " 已被暫時封鎖",
     "chat-filter": "該字詞不被允許!",
     "chat-filter-reason": "不適當言論",
+    "send-fail": "訊息發送失敗",
+    "send-success": "已成功發送訊息",
 
     "user-info": "成員資訊",
     "user-info-name": "名稱",
@@ -74,6 +76,8 @@
     "menu-name": "指令列表",
     "menu-select": "請選擇一項...",
     "selected": "已選擇  ",
+    "next-page": "下一頁",
+    "previous-page": "上一頁",
     "menu-message-addadmin": "新增一位成員至管理員名單",
     "menu-message-addbypass": "新增一位成員至繞過名單",
     "menu-message-ban": "封鎖一位成員",
@@ -89,11 +93,13 @@
     "menu-message-gay": "獲取成員同性戀值",
     "menu-message-kick": "從伺服器踢出一位玩家",
     "menu-message-mute": "將一位成員禁言",
+    "menu-message-ping": "ping 一個 IP 位置",
     "menu-message-reload": "重新加載設定及語言檔",
     "menu-message-removeadmin": "從管理員名單中移除一位成員",
     "menu-message-removebypass": "從繞過名單中移除一位成員",
     "menu-message-showwarn": "顯示某成員的警告數量",
     "menu-message-slowmoe": "設置頻道慢速模式",
+    "menu-message-send": "使用機器人傳送私人訊息",
     "menu-message-time": "獲取當前時間",
     "menu-message-tlm": "發送臨時訊息",
     "menu-message-tempban": "暫時封鎖一位成員",
@@ -110,8 +116,9 @@
     "music-stop": "停止播放",
     "music-list": "播放列表",
     "music-repeat": "循環播放",
+    "music-random": "隨機播放",
     "music-skip": "下一首",
-    "music-mute": "靜音",
+    "music-favorite": "新增至我的最愛",
     "music-url-error": "未輸入欲播放歌曲網址",
     "music-user-not-in-channel": "請先加入語音頻道",
     "music-playing": "正在播放... ",
@@ -136,6 +143,18 @@
     "music-moved": "已成功移動播放順序",
     "delete-error": "無法刪除正在播放的歌曲",
     "music-deleted": "已成功刪除指定編號的歌曲",
+    "music-randomed": "已打亂播放清單順序",
+    "favorite-not-url": "未輸入欲加入歌曲網址",
+    "favorite-error-url": "請輸入正確的歌曲網址",
+    "favorite-added": "已新增至我的最愛列表",
+    "favorite-remove-not-number": "未輸入欲刪除歌曲編號",
+    "favorite-list-nothing": "沒有項目可以顯示",
+    "favorite-list-title": " 的喜好歌曲",
+    "favorite-play-not-number": "未輸入欲播放歌曲編號",
+    "favorite-menu-add": "新增歌曲至我的最愛",
+    "favorite-menu-remove": "從我的最愛中移除指定編號歌曲",
+    "favorite-menu-list": "列出我的最愛清單",
+    "favorite-menu-play": "從我的最愛中播放指定編號歌曲",
 
     "debug-enabled": "偵錯模式: 開啟",
     "debug-disabled": "偵錯模式: 關閉",
@@ -147,5 +166,18 @@
     "reason": " (原因)",
     "someone's": " 的",
     "category": " [頻道ID]",
-    "duration": " [持續時間]"
+    "duration": " [持續時間]",
+
+    "ping-timeout": "要求等候逾時",
+    "with_32_bytes": "(使用 32 位元組的資料)",
+    "reply_from": "回覆自 ",
+    "bytes_time": ": 位元組=32 時間=",
+    "round_trip_times": "大約的來回時間 (毫秒):",
+    "minimum": "最小值 = ",
+    "maximum": "，最大值 = ",
+    "average": "，平均 = ",
+    "ping_stat": "Ping 統計資料:",
+    "packet": "封包: 已傳送 = 4，已收到 = ",
+    "lost": "，已遺失 = ",
+    "lost_%": "% 遺失"
 }
