--- a/lang/en-us.json
+++ b/lang/en-us.json
@@ -24,7 +24,7 @@
     "user-kicked": " has been successfully kicked!",
     "user-warned": " has been warned!",
     "warn-reason": " Reason: ",
-    "warn-amount": " Now warn amount:",
+    "warn-amount": " 's warn amount: ",
     "user-nowarn": " This user has no warnings.",
     "warn-cleared-all": " All warnings has been successfully cleared.",
     "mute-role-name": "muted",
@@ -58,6 +58,12 @@
     "chat-filter-reason": "inappropriate remarks",
     "send-fail": "Failed to send message.",
     "send-success": "Message sent successfully.",
+    "prefix-tip": "command prefix:",
+    "function-enable": "Function enabled",
+    "function-disable": "Function disabled",
+    "function-command-enable": "Command enabled",
+    "function-command-disable": "Command disabled",
+    "function-None": "None",
 
     "user-info": "User Information",
     "user-info-name": "Name",
@@ -119,6 +125,7 @@
     "music-random": "Shuffle",
     "music-skip": "Skip",
     "music-favorite": "Add to my favorites",
+    "music-unfavorite": "Remove from my favorites",
     "music-url-error": "Please type a right url.",
     "music-user-not-in-channel": "Please join a voice channel first.",
     "music-playing": "Now playing... ",
@@ -148,6 +155,9 @@
     "favorite-error-url": "Please enter the correct song URL.",
     "favorite-added": "Added to my favorites list.",
     "favorite-remove-not-number": "The number of the song to be deleted has not been entered.",
+    "favorite-remove-all": "All favorite songs have been removed.",
+    "favorite-removed": "Removed:",
+    "favorite-remove-not-favorite": "This song is not in your favorites.",
     "favorite-list-nothing": "No items to show.",
     "favorite-list-title": "'s favorite songs",
     "favorite-play-not-number": "The number of the song you want to play has not been entered.",
