--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -24,7 +24,7 @@
     "user-kicked": " 已被踢出伺服器!",
     "user-warned": " 已被警告!",
     "warn-reason": " 原因: ",
-    "warn-amount": " 警告次数:",
+    "warn-amount": " 的警告次数: ",
     "user-nowarn": " 该用户没有警告",
     "warn-cleared-all": " 已清除所有警告",
     "mute-role-name": "已被禁言",
@@ -58,6 +58,12 @@
     "chat-filter-reason": "不适当言论",
     "send-fail": "讯息发送失败",
     "send-success": "已成功发送讯息",
+    "prefix-tip": "命令前缀:",
+    "function-enable": "已启用功能",
+    "function-disable": "已禁用功能",
+    "function-command-enable": "已启用指令",
+    "function-command-disable": "已禁用指令",
+    "function-None": "无",
 
     "user-info": "成员资讯",
     "user-info-name": "名称",
@@ -119,6 +125,7 @@
     "music-random": "随机播放",
     "music-skip": "下一首",
     "music-favorite": "新增至我的最爱",
+    "music-unfavorite": "从我的最爱中移除",
     "music-url-error": "未输入欲播放歌曲网址",
     "music-user-not-in-channel": "请先加入语音频道",
     "music-playing": "正在播放... ",
@@ -148,6 +155,9 @@
     "favorite-error-url": "请输入正确的歌曲网址",
     "favorite-added": "已新增至我的最爱列表",
     "favorite-remove-not-number": "未输入欲删除歌曲编号",
+    "favorite-remove-all": "已移除所有喜好歌曲",
+    "favorite-removed": "已移除:",
+    "favorite-remove-not-favorite": "此歌曲未在你的喜好歌曲中",
     "favorite-list-nothing": "没有项目可以显示",
     "favorite-list-title": " 的喜好歌曲",
     "favorite-play-not-number": "未输入欲播放歌曲编号",
