--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -24,7 +24,7 @@
     "user-kicked": " 已被踢出伺服器!",
     "user-warned": " 已被警告!",
     "warn-reason": " 原因: ",
-    "warn-amount": " 警告次數:",
+    "warn-amount": " 的警告次數: ",
     "user-nowarn": " 該用戶沒有警告",
     "warn-cleared-all": " 已清除所有警告",
     "mute-role-name": "已被禁言",
@@ -58,6 +58,12 @@
     "chat-filter-reason": "不適當言論",
     "send-fail": "訊息發送失敗",
     "send-success": "已成功發送訊息",
+    "prefix-tip": "命令前綴:",
+    "function-enable": "已啟用功能",
+    "function-disable": "已禁用功能",
+    "function-command-enable": "已啟用指令",
+    "function-command-disable": "已禁用指令",
+    "function-None": "無",
 
     "user-info": "成員資訊",
     "user-info-name": "名稱",
@@ -119,6 +125,7 @@
     "music-random": "隨機播放",
     "music-skip": "下一首",
     "music-favorite": "新增至我的最愛",
+    "music-unfavorite": "從我的最愛中移除",
     "music-url-error": "未輸入欲播放歌曲網址",
     "music-user-not-in-channel": "請先加入語音頻道",
     "music-playing": "正在播放... ",
@@ -148,6 +155,9 @@
     "favorite-error-url": "請輸入正確的歌曲網址",
     "favorite-added": "已新增至我的最愛列表",
     "favorite-remove-not-number": "未輸入欲刪除歌曲編號",
+    "favorite-remove-all": "已移除所有喜好歌曲",
+    "favorite-removed": "已移除:",
+    "favorite-remove-not-favorite": "此歌曲未在你的喜好歌曲中",
     "favorite-list-nothing": "沒有項目可以顯示",
     "favorite-list-title": " 的喜好歌曲",
     "favorite-play-not-number": "未輸入欲播放歌曲編號",
