--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -21,6 +21,7 @@
     "message-cleared": " 則訊息已被刪除!",
     "user-banned": " 已被封鎖!",
     "user-unbanned": " 已解除封鎖!",
+    "user-not-banned": "該成員未被封鎖",
     "user-kicked": " 已被踢出伺服器!",
     "user-warned": " 已被警告!",
     "warn-reason": " 原因: ",
