--- a/lang/en-us.json
+++ b/lang/en-us.json
@@ -81,10 +81,12 @@
     "user-info-boots": "Is server booster?",
 
     "menu-name": "Commands list",
+    "menu-music-name": "Music commands list",
     "menu-select": "Please select one...",
     "selected": "Selected : ",
     "next-page": "next page",
     "previous-page": "previous page",
+    "menu-music": "Music bot command",
     "menu-message-addadmin": "Add a member to the administrator list",
     "menu-message-addbypass": "Add a member to the bypass list",
     "menu-message-ban": "ban a member",
@@ -115,6 +117,18 @@
     "menu-message-unmute": "unmute a member",
     "menu-message-uinfo": "View a member's information",
     "menu-message-warn": "warn a member",
+    "menu-message-play": "Play the specified song (url / keyword search)",
+    "menu-message-leave": "Let the bot leave the current voice channel",
+    "menu-message-pause": "Pause the current song",
+    "menu-message-resume": "Resume the current song",
+    "menu-message-repeat": "Toggle repeat mode",
+    "menu-message-stop": "Stop playing the current playlist",
+    "menu-message-volume": "Adjust music volume (%)",
+    "menu-message-skip": "Skip the currently playing song",
+    "menu-message-playlist": "View playlist",
+    "menu-message-listmove": "Move the musics in the playlist",
+    "menu-message-listremove": "Remove the music with the specified playlist number",
+    "menu-message-listrandom": "Shuffle the musics in the playlist",
 
     "search_result": "search results:",
     "music-link": "Go to link",
@@ -162,7 +176,7 @@
     "favorite-list-nothing": "No items to show.",
     "favorite-list-title": "'s favorite songs",
     "favorite-play-not-number": "The number of the song you want to play has not been entered.",
-    "favorite-menu-add": "Add a song to my favorites",
+    "favorite-menu-add": "Add a song to my favorites (url)",
     "favorite-menu-remove": "Remove the specified numbered song from favorites",
     "favorite-menu-list": "List my favorites list",
     "favorite-menu-play": "Play the specified number of songs from favorites",
