--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -81,10 +81,12 @@
     "user-info-boots": "加成伺服器?",
 
     "menu-name": "指令列表",
+    "menu-music-name": "音乐指令列表",
     "menu-select": "请选择一项...",
     "selected": "已选择  ",
     "next-page": "下一页",
     "previous-page": "上一页",
+    "menu-music": "音乐机器人指令",
     "menu-message-addadmin": "新增一位成员至管理员名单",
     "menu-message-addbypass": "新增一位成员至绕过名单",
     "menu-message-ban": "封锁一位成员",
@@ -115,6 +117,18 @@
     "menu-message-unmute": "将一位成员解除禁言",
     "menu-message-uinfo": "查看一位成员的资讯",
     "menu-message-warn": "警告一位成员",
+    "menu-message-play": "播放指定歌曲 (url / 关键字搜寻)",
+    "menu-message-leave": "让机器人离开当前语音频道",
+    "menu-message-pause": "暂停播放当前歌曲",
+    "menu-message-resume": "继续播放当前歌曲",
+    "menu-message-repeat": "切换循环播放状态",
+    "menu-message-stop": "结束播放当前歌曲清单",
+    "menu-message-volume": "调整音乐音量 (%)",
+    "menu-message-skip": "跳过当前播放歌曲",
+    "menu-message-playlist": "查看播放清单",
+    "menu-message-listmove": "移动播放清单内的歌曲",
+    "menu-message-listremove": "删除指定播放清单编号歌曲",
+    "menu-message-listrandom": "随机播放播放清单内歌曲",
 
     "search_result": "搜寻结果:",
     "music-link": "前往连结",
@@ -162,7 +176,7 @@
     "favorite-list-nothing": "没有项目可以显示",
     "favorite-list-title": " 的喜好歌曲",
     "favorite-play-not-number": "未输入欲播放歌曲编号",
-    "favorite-menu-add": "新增歌曲至我的最爱",
+    "favorite-menu-add": "新增歌曲至我的最爱 (url)",
     "favorite-menu-remove": "从我的最爱中移除指定编号歌曲",
     "favorite-menu-list": "列出我的最爱清单",
     "favorite-menu-play": "从我的最爱中播放指定编号歌曲",
