--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -81,10 +81,12 @@
     "user-info-boots": "加成伺服器?",
 
     "menu-name": "指令列表",
+    "menu-music-name": "音樂指令列表",
     "menu-select": "請選擇一項...",
     "selected": "已選擇  ",
     "next-page": "下一頁",
     "previous-page": "上一頁",
+    "menu-music": "音樂機器人指令",
     "menu-message-addadmin": "新增一位成員至管理員名單",
     "menu-message-addbypass": "新增一位成員至繞過名單",
     "menu-message-ban": "封鎖一位成員",
@@ -115,6 +117,18 @@
     "menu-message-unmute": "將一位成員解除禁言",
     "menu-message-uinfo": "查看一位成員的資訊",
     "menu-message-warn": "警告一位成員",
+    "menu-message-play": "播放指定歌曲 (url / 關鍵字搜尋)",
+    "menu-message-leave": "讓機器人離開當前語音頻道",
+    "menu-message-pause": "暫停播放當前歌曲",
+    "menu-message-resume": "繼續播放當前歌曲",
+    "menu-message-repeat": "切換循環播放狀態",
+    "menu-message-stop": "結束播放當前歌曲清單",
+    "menu-message-volume": "調整音樂音量 (%)",
+    "menu-message-skip": "跳過當前播放歌曲",
+    "menu-message-playlist": "查看播放清單",
+    "menu-message-listmove": "移動播放清單內的歌曲",
+    "menu-message-listremove": "刪除指定播放清單編號歌曲",
+    "menu-message-listrandom": "隨機播放播放清單內歌曲",
 
     "search_result": "搜尋結果:",
     "music-link": "前往連結",
@@ -162,7 +176,7 @@
     "favorite-list-nothing": "沒有項目可以顯示",
     "favorite-list-title": " 的喜好歌曲",
     "favorite-play-not-number": "未輸入欲播放歌曲編號",
-    "favorite-menu-add": "新增歌曲至我的最愛",
+    "favorite-menu-add": "新增歌曲至我的最愛 (url)",
     "favorite-menu-remove": "從我的最愛中移除指定編號歌曲",
     "favorite-menu-list": "列出我的最愛清單",
     "favorite-menu-play": "從我的最愛中播放指定編號歌曲",
