--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -144,6 +144,7 @@
     "music-url-error": "未輸入欲播放歌曲網址",
     "music-user-not-in-channel": "請先加入語音頻道",
     "music-playing": "正在播放... ",
+    "music-playing-repeat": "正在循環播放... ",
     "music-uploader": "上傳者",
     "music-duration": "時長",
     "music-like_count": "按讚數",
@@ -183,7 +184,7 @@
 
     "debug-enabled": "偵錯模式: 開啟",
     "debug-disabled": "偵錯模式: 關閉",
-
+    "version": "當前版本:",
     "@user": " [@使用者]",
     "message": " [訊息]",
     "language": " [語言檔名稱]",
@@ -192,6 +193,8 @@
     "someone's": " 的",
     "category": " [頻道ID]",
     "duration": " [持續時間]",
+    "enable": "開啟",
+    "disable": "關閉",
 
     "ping-timeout": "要求等候逾時",
     "with_32_bytes": "(使用 32 位元組的資料)",
